# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add remaining fixes for JavaScript CloudI API
    * Add a javascript version of the messaging integration test

2014-11-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix large sends in the JavaScript CloudI API
    * Add a javascript version of the msg_size integration test

2014-11-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix return/forward usage in the JavaScript CloudI API
    * Fix large receives in the JavaScript CloudI API

2014-11-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add JavaScript/node.js CloudI API
        * return/forward function calls do not yet work due to exception usage
    * Add a javascript version of the http_req integration test

2014-11-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Bring the cloudi_service_http_elli functionality to be equivalent to
      cloudi_service_http_cowboy, except for multipart requests and
      websockets usage (which currently require cloudi_service_http_cowboy)
    * Remove elli_websocket

2014-11-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update elli
    * Add elli_websocket as a dependency for cloudi_service_http_elli
    * Update cowboy

2014-11-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve the efficiency of header and query string encoding in
      cloudi_service_http_cowboy and cloudi_service_http_elli
        * Previously, the query string values that were lists were in the
          reverse order when using the external format, but now the
          value order is the same as the query string order

2014-11-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Perl CloudI API mcast_async return value
    * Add Perl messaging integration test

2014-11-06 Michael Truog   <mjtruog [at] gmail (dot) com>
